Added a Data Pipeline

--- a/Spam Messages Detection.ipynb
+++ b/Spam Messages Detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "saving-oriental",
+   "id": "standard-separation",
    "metadata": {},
    "source": [
     "# Spam Message Classification\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "unusual-christopher",
+   "id": "advisory-blind",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "olive-possible",
+   "id": "first-mason",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "public-ceramic",
+   "id": "special-purse",
    "metadata": {},
    "source": [
     "Let's import all the libraries we think we will use:"
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "apart-usage",
+   "id": "resident-interest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "numeric-incident",
+   "id": "impressed-mirror",
    "metadata": {},
    "source": [
     "We'll use **read_csv** and make note of the **sep** argument, we can also specify the desired column names by passing in a list of *names*."
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "horizontal-stocks",
+   "id": "signal-addition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "asian-service",
+   "id": "chief-whole",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "serious-words",
+   "id": "robust-catalyst",
    "metadata": {},
    "source": [
     "## Exploratory Data Analysis"
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "sophisticated-startup",
+   "id": "general-click",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "mysterious-hazard",
+   "id": "southwest-bidder",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "future-carbon",
+   "id": "racial-messaging",
    "metadata": {},
    "source": [
     "Let's add a new column to detect how long the text messages are:"
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "athletic-metallic",
+   "id": "warming-exhibition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "alternate-budget",
+   "id": "elect-qualification",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "responsible-bathroom",
+   "id": "english-preparation",
    "metadata": {},
    "source": [
     "### Data Visualization"
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "cardiac-kruger",
+   "id": "bridal-bargain",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "czech-differential",
+   "id": "sixth-vehicle",
    "metadata": {},
    "source": [
     "Looks like text length may be a good feature to think about! Let's increase the bin size and check."
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "medieval-rally",
+   "id": "silver-thanks",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "desirable-accounting",
+   "id": "pressed-pension",
    "metadata": {},
    "source": [
     "If we increase the bin size to 150, we notice that there are two peaks in the plot.\n",
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "documented-passport",
+   "id": "parallel-textbook",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adverse-introduction",
+   "id": "dutch-median",
    "metadata": {},
    "source": [
     "Very interesting! We know the horizontal-axis represents the length of the messages and the vertical-axis represents the frequency of the messages or the count. Through just basic EDA we've been able to discover a trend that spam messages tend to have more characters."
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "acting-colon",
+   "id": "suspected-awareness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "pretty-intake",
+   "id": "corresponding-powell",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "driven-diversity",
+   "id": "selective-bread",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "coated-nerve",
+   "id": "endangered-deposit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "frank-second",
+   "id": "ordinary-palmer",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "strategic-reward",
+   "id": "roman-watch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "architectural-annotation",
+   "id": "industrial-timber",
    "metadata": {},
    "source": [
     "Now we can use **.transform** on our Bag-of-Words (bow) transformed object and transform the entire DataFrame of messages. Let's go ahead and check out how the bag-of-words counts for the entire SMS corpus is a large, sparse matrix:"
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "interstate-andrews",
+   "id": "alternative-orchestra",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "synthetic-dressing",
+   "id": "authentic-amount",
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "lovely-ivory",
+   "id": "rational-trick",
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "written-wound",
+   "id": "blond-server",
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sought-miami",
+   "id": "republican-playback",
    "metadata": {},
    "source": [
     "## TF-IDF\n",
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "handmade-petroleum",
+   "id": "chemical-shareware",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "necessary-replica",
+   "id": "controlled-error",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "parliamentary-notebook",
+   "id": "threatened-database",
    "metadata": {},
    "source": [
     "To transform the entire bag-of-words corpus into TF-IDF corpus at once:"
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "military-pacific",
+   "id": "enormous-election",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "liberal-dinner",
+   "id": "cardiovascular-opposition",
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pacific-speaker",
+   "id": "understood-flesh",
    "metadata": {},
    "source": [
     "## Training a Model\n",
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "basic-place",
+   "id": "based-vietnam",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "wired-payment",
+   "id": "banned-joshua",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "automated-chair",
+   "id": "passing-timeline",
    "metadata": {},
    "source": [
     "Let's try classifying our single random message and checking how we do:"
@@ -852,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "bridal-tunnel",
+   "id": "centered-volume",
    "metadata": {},
    "outputs": [
     {
@@ -870,9 +870,191 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "killing-gravity",
+   "metadata": {},
+   "source": [
+    "## Model Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "reasonable-learning",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ham' 'ham' 'spam' ... 'ham' 'ham' 'ham']\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = spam_detection_model.predict(messages_tfidf)\n",
+    "print(predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "optimum-cylinder",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         ham       0.98      1.00      0.99      4825\n",
+      "        spam       1.00      0.85      0.92       747\n",
+      "\n",
+      "    accuracy                           0.98      5572\n",
+      "   macro avg       0.99      0.92      0.95      5572\n",
+      "weighted avg       0.98      0.98      0.98      5572\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "print(classification_report(messages['label'], predictions))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "compressed-natural",
+   "metadata": {},
+   "source": [
+    "In the above \"evaluation\",we evaluated accuracy on the same data we used for training. **You should never actually evaluate on the same dataset you train on!**\n",
+    "\n",
+    "Such evaluation tells us nothing about the true predictive power of our model. If we simply remembered each example during training, the accuracy on training data would trivially be 100%, even though we wouldn't be able to classify any new messages.\n",
+    "\n",
+    "A proper way is to split the data into a training/test set, where the model only ever sees the **training data** during its model fitting and parameter tuning. The **test data** is never used in any way. This is then our final evaluation on test data is representative of true predictive performance.\n",
+    "\n",
+    "## Train Test Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "bored-civilian",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "animal-respondent",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msg_train, msg_test, label_train, label_test = train_test_split(messages['message'], messages['label'], test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "italian-alabama",
+   "metadata": {},
+   "source": [
+    "## Creating a Data Pipeline\n",
+    "\n",
+    "Let's run our model again and then predict off the test set. We will use SciKit Learn's [pipeline](http://scikit-learn.org/stable/modules/pipeline.html) capabilities to store a pipeline of workflow. This will allow us to set up all the transformations that we will do to the data for future use. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "portable-manual",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "spoken-thanks",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = Pipeline([\n",
+    "    ('bow', CountVectorizer(analyzer=custom_analyzer)), # strings to token integer counts\n",
+    "    ('tfidf', TfidfTransformer()), # integer counts to weighted TF-IDF scores\n",
+    "    ('classifier', MultinomialNB()) # train on TF-IDF vectors w/ Naive Bayes classifier\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "valued-pontiac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('bow',\n",
+       "                 CountVectorizer(analyzer=<function custom_analyzer at 0x00000240D02A04C0>)),\n",
+       "                ('tfidf', TfidfTransformer()),\n",
+       "                ('classifier', MultinomialNB())])"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline.fit(msg_train, label_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "minor-baghdad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline_predictions = pipeline.predict(msg_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "aware-audio",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         ham       0.96      1.00      0.98       966\n",
+      "        spam       1.00      0.70      0.83       149\n",
+      "\n",
+      "    accuracy                           0.96      1115\n",
+      "   macro avg       0.98      0.85      0.90      1115\n",
+      "weighted avg       0.96      0.96      0.96      1115\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(label_test,pipeline_predictions))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alpha-delight",
+   "id": "announced-butter",
    "metadata": {},
    "outputs": [],
    "source": []
